gccida/c3/make_regs_eqv
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/make_regs_eqv/src/cse.c:1543:2: error: expected expression
 struct cse_reg_info = cached_cse_reg_info; 
 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/make_regs_eqv/src/cse.c:1545:2: error: expected expression
 struct cse_reg_info = get_cse_reg_info( old); 
 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/make_regs_eqv/src/cse.c:1566:20: error: use of undeclared identifier 'uid_cuid_0'
|| ( *( ( _DWORD *)uid_cuid_0 + *( int *)( reg_n_info->data.l[a1] + 4)) > cse_basic_block_end 
                   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/make_regs_eqv/src/cse.c:1567:18: error: use of undeclared identifier 'uid_cuid_0'
|| *( ( _DWORD *)uid_cuid_0 + *( int *)reg_n_info->data.l[a1]) < cse_basic_block_start) 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/make_regs_eqv/src/cse.c:1568:18: error: use of undeclared identifier 'uid_cuid_0'
&& *( ( _DWORD *)uid_cuid_0 + *( int *)( reg_n_info->data.l[a1] + 4)) > *( ( _DWORD *)uid_cuid_0 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/make_regs_eqv/src/cse.c:1568:87: error: use of undeclared identifier 'uid_cuid_0'
&& *( ( _DWORD *)uid_cuid_0 + *( int *)( reg_n_info->data.l[a1] + 4)) > *( ( _DWORD *)uid_cuid_0 
                                                                                      ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/make_regs_eqv/src/obj/cse.o] Error 1
